--- a/style.css
+++ b/style.css
@@ -398,7 +398,16 @@ body {
     /* background-color: blue; */
 }
 
-.disc {
+.discBg {
+    background-color: white;
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.3);
+    border-radius: 10%;
+}
+
+.disc-wrapper {
     position: relative;
     display: flex;
     justify-content: center;
@@ -406,13 +415,26 @@ body {
     margin-bottom: -10%;
 }
 
-.disc svg{
+.disc-wrapper svg{
     /* position: absolute; */
-    background-color: white;
+    position: relative;
+    /* background-color: white; */
     padding: 1rem;
     border-radius: 10%;
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.3);
     /* top: -20%; */
+}
+
+.turn {
+    animation: turn 3s linear infinite;
+}
+
+@keyframes turn {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .progress {
@@ -420,22 +442,38 @@ body {
     width: 100%;
     height: 3px;
     background-color: gray;
-    margin: 10px 0;
+    margin: 15px 0;
     justify-self: center;
 }
 
 .menu h1 p {
 }
 
+.hidden {
+    opacity: 0;
+}
+
 .textMenu {
     padding: 0 1rem;
+}
+
+.textMenu h1 {
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+.textMenu h1,
+.textMenu p {
+    margin-bottom: 10px;
+    transition: opacity 500ms ease;
+    white-space: nowrap;
 }
 
 .btnMenu {
     display: flex;
     justify-content: center;
     width: 100%;
-    gap: 10px;
+    gap: 40px;
     background-color: white;
     padding: 1rem 0;
     /* border-top-right-radius: 10%; */
@@ -444,6 +482,16 @@ body {
 .btnMenu img {
     width: 20px;
     height: 20px;
+}
+
+.btnMenu img,
+.btnMenu svg {
+    transition: transform 0.3s ease;
+}
+
+.btnMenu img:hover,
+.btnMenu svg:hover {
+    transform: scale(1.5);
 }
 
 .fwLeft {
