--- a/style.css
+++ b/style.css
@@ -942,10 +942,15 @@ button {
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 30%;
+    height: 50%;
     /* flex-direction: column; */
     gap: 5rem;
+    /* padding: 10rem 0; */
 } 
+
+.tools-up {
+    align-items: end;
+}
 
 .tools-img img {
     width: 100px;
@@ -996,6 +1001,7 @@ button {
     border: 2px solid transparent;
     border-radius: 8px;
     width:  50%;
+    height: 350px;
     transform-origin: right bottom;
     transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
     cursor: pointer;
